# taskpy

./: README.md  manage.py  pyproject.toml
src/: models.py  serializers.py  urls.py  views.py
src/migrations/: 0001_initial.py  0002_task_user_id.py  0003_rename_user_id_task_user.py  0004_alter_task_user.py
taskpy/: asgi.py  settings.py  urls.py  wsgi.py
